--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -22,7 +22,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="/static/main/assets/img/favicon.png" rel="icon">
+  <link href="/static/main/assets/img/logo.jpg" rel="icon">
   <link href="/static/main/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
